添加mips交叉编译

--- a/Ubuntu/Ubuntu - 交叉编译环境/CTest/CMakeLists.txt
+++ b/Ubuntu/Ubuntu - 交叉编译环境/CTest/CMakeLists.txt
@@ -1,8 +1,15 @@
 cmake_minimum_required(VERSION 3.7)
 
 # 添加GCC编译器路径
-# set(CMAKE_C_COMPILER "")
-# set(CMAKE_CXX_COMPILER "")
+if(${CROSS_COMPILE_FRAMEWORK} STREQUAL "aarch64")
+	message("[+] framework is aarch64")
+	set(CMAKE_C_COMPILER "aarch64-linux-gnu-gcc")
+	set(CMAKE_CXX_COMPILER "aarch64-linux-gnu-g++")
+elseif(${CROSS_COMPILE_FRAMEWORK} STREQUAL "mips64")
+	message("[+] framework is mips64")
+	set(CMAKE_C_COMPILER "mips64el-loongson-linux-gcc")
+	set(CMAKE_CXX_COMPILER "mips64el-loongson-linux-g++")
+endif()
 
 project(CTest)
 
